# OS-labs

dynamic_partition_allocation/: CMakeLists.txt  main.cpp
dynamic_partition_allocation/include/: allocation.h  block.h
dynamic_partition_allocation/src/: allocation.cpp
dynamic_partition_allocation/test/: test01.txt
job_scheduling/: CMakeLists.txt  main.cpp
job_scheduling/include/: job.h  jobloader.h  observer.h  scheduler.h  strategy.h
job_scheduling/jobs/: job01.txt  job02.txt
job_scheduling/src/: jobloader.cpp  observer.cpp  scheduler.cpp  strategy.cpp
page_table_allocation/: CMakeLists.txt  main.cpp
page_table_allocation/include/: allocation.h  block.h
page_table_allocation/src/: allocation.cpp
page_table_allocation/test/: test01.txt
proc_scheduling/: CMakeLists.txt  main.cpp
proc_scheduling/include/: observer.h  proc.h  procloader.h  scheduler.h  strategy.h
proc_scheduling/procs/: proc01.txt  proc02.txt  proc03.txt
proc_scheduling/src/: observer.cpp  procloader.cpp  scheduler.cpp  strategy.cpp
